force-app/main/default/objects/TaskParameterTemplate__c/TaskParameterTemplate__c.object-meta.xml
<CustomObject>
    <label>Task Parameter Template</label>
    <nameField>
        <label>Task Parameter Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Parameter Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>