force-app/main/default/objects/TaskParameterTemplate__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <label>Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>