force-app/main/default/objects/TaskParameterTemplate__c/fields/TaskTemplateId__c.field-meta.xml
<CustomField>
    <fullName>TaskTemplateId__c</fullName>
    <label>Task Template</label>
    <referenceTo>TaskTemplate__c</referenceTo>
    <relationshipLabel>Parameters</relationshipLabel>
    <relationshipName>Parameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>